--- a/_includes/css/shop-img.css
+++ b/_includes/css/shop-img.css
@@ -1,39 +1,4 @@
-section#about .shop .img {
-    content: url('{{ site.baseurl }}/img/shop.jpg');
-    max-width: 100%;
-    max-height: 100%;
-
-     margin: 25px 10px;
-
-    background: #141414;
-    box-shadow: 0 0 15px 10px #141414;
-}
-
-
-/* z pliku */
-.image-shadow:after {
-    transform: scale(0.95) translateY(36px) translateZ(-30px);
-    filter: blur(20px);
-    opacity: 0.9;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    /* // Neat huh! :) */
-    background-image: url('{{ site.baseurl }}/img/shop.jpg'); 
-    background-size: cover;
-    z-index: -1;
-    transition: filter .3s ease;
-}
-  
-.js-tilt-container {
-transition: transform .1s ease;
-transform: rotateX(0) rotateY(0);
-    transform-style: preserve-3d;
-}
-
-.leave {
-transform: rotateX(0) rotateY(0) !important;
-    transition-timing-function: cubic-bezier(0.42, 0, 0, 1)!important;
-    transition-duration: 1.5s;
+section#about .shop-img {
+    box-shadow: 10px 10px 5px grey;
+    border-radius: 50%;
 }
